@@ -11,6 +11,12 @@ Changes with Apache 2.3.14
   *) configure: Support reallyall option also for --enable-mods-static.
      [Rainer Jung]
 
+  *) mod_socache_dc: add --with-distcache to configure for choosing
+     the distcache installation directory. [Rainer Jung]
+
+  *) mod_socache_dc: use correct build variable MOD_SOCACHE_DC_LDADD
+     instead of MOD_SOCACHE_LDADD in build macro. [Rainer Jung]
+
 Changes with Apache 2.3.13
 
   *) ab: Support specifying the local address to use. PR 48930.
